# GalaRP

./: .gitignore  OUTLINE.txt  README.md  README.rst  gitignore  pyproject.toml  setup.py  tox.ini
docs/source/: conf.py  index.rst
galarp/: __init__.py  utils.py
galarp/builtins/: __init__.py  events.py  host_winds.py  particles.py  satellite_potentials.py  winds.py
galarp/builtins/tests/: helpers.py  test_builtins.py
galarp/components/: __init__.py  base.py  particle_seeder.py  particles.py  winds.py
galarp/components/ccomponents/: particleseeder.c
galarp/components/tests/: test_base.py  test_winds.py
galarp/core/: __init__.py  outputs.py  particles.py  rampressure.py  shadows.py  sim.py
galarp/core/tests/: test_config.py  test_sim.py
galarp/physics/: __init__.py
galarp/postprocessing/: __init__.py
galarp/postprocessing/analysis/: disk_analysis.py
galarp/postprocessing/plotting/: __init__.py  analysis_plots.py  animated_plots.py  general_plots.py  k3d_plots.py  matrix_plots.py
paper/: 0-1-BackToBasics.ipynb
scripts/: galarp_cli.py
